# randombytes-mc-control

./: .gitignore  CHANGES.md  FIXES_SUMMARY.md  IMPROVEMENTS_ROUND2.md  README.md  ROUND3_COMPLETE.md  ROUND3_IMPLEMENTATION_GUIDE.md  SECURITY.md  UI_SUMMARY.md
backend-frontend/: .dockerignore  Cargo.toml  Dockerfile  README.md  backend.config.example  docker-compose.yml
backend-frontend/frontend/: app.js  index.html  style.css
backend-frontend/src/: config.rs  main.rs  plugin_client.rs  websocket.rs
plugin/: README.md  pom.xml
plugin/src/main/java/dev/mccontrol/: Main.java
plugin/src/main/java/dev/mccontrol/api/: APIServer.java
plugin/src/main/java/dev/mccontrol/logger/: FileChangeLogger.java
plugin/src/main/java/dev/mccontrol/manager/: ConfigManager.java  CustomRecipeManager.java  FileManager.java  LogManager.java
plugin/src/main/java/dev/randombytes/: APIServer.java  CustomRecipeManager.java  FileChangeLogger.java  FileManager.java  LogManager.java  MainR.java  MetricsCollector.java  PlayerDataManager.java  PlayerTrackingListener.java
plugin/src/main/java/dev/randombytes/mccontrol/: APIServer.java  CustomRecipeManager.java  FileChangeLogger.java  FileManager.java  LogManager.java  MCControlPlugin.java  MetricsCollector.java  PlayerDataManager.java  PlayerTrackingListener.java
plugin/src/main/java/dev/tbodyowski/: MainT.java
plugin/src/main/resources/: plugin.yml
