[package]
name = "randombytes-mc-control-backend"
version = "1.0.0"
edition = "2021"
authors = ["RandomBytes"]
description = "Backend server for Minecraft server control"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
rsa = "0.9"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"
mime_guess = "2.0"
